.provarCaches/00Df2000001KKNJEA4/objects/IncapMessaging__Message_Template__c.object
<CustomObject>
    <fields>
        <fullName>IncapMessaging__JSON_Config__c</fullName>
        <label>JSON Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Notification__c</fullName>
        <label>Notification</label>
        <referenceTo>IncapMessaging__Notification__c</referenceTo>
        <relationshipLabel>Message Templates</relationshipLabel>
        <relationshipName>Message_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IncapMessaging__Service__c</fullName>
        <label>Service</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Message Template</label>
    <listViews>
        <fullName>IncapMessaging__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Message Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Message Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>